--- a/frontend/src/app/shared/components/sidebar/sidebar.html
+++ b/frontend/src/app/shared/components/sidebar/sidebar.html
@@ -42,8 +42,17 @@
 
   <!-- Bottom Section -->
   <div class="p-4 border-t border-primary-content/20">
+    <!-- Settings -->
+    <a routerLink="/profile-settings" class="btn btn-ghost btn-sm w-full justify-start mb-2" [class.btn-circle]="collapsed()">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+      </svg>
+      <span [class.hidden]="collapsed()">Settings</span>
+    </a>
+
     <!-- Theme Switcher -->
-    <div class="dropdown dropdown-top mb-4">
+    <div class="dropdown dropdown-top mb-2">
       <div tabindex="0" role="button" class="btn btn-ghost btn-sm w-full justify-start" [class.btn-circle]="collapsed()">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="w-5 h-5 stroke-current">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
@@ -76,18 +85,13 @@
       </ul>
     </div>
 
-    <!-- User Info and Logout -->
-    <div class="flex flex-col gap-2">
-      <div class="text-sm" [class.hidden]="collapsed()">
-        {{ username() }}
-      </div>
-      <button class="btn btn-ghost btn-sm w-full justify-start" [class.btn-circle]="collapsed()" (click)="logout()">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
-        </svg>
-        <span [class.hidden]="collapsed()">Logout</span>
-      </button>
-    </div>
+    <!-- Logout -->
+    <button class="btn btn-ghost btn-sm w-full justify-start" [class.btn-circle]="collapsed()" (click)="logout()">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+      </svg>
+      <span [class.hidden]="collapsed()">Logout</span>
+    </button>
   </div>
 </div>
 
